<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#00000000"
        android:fitsSystemWindows="true"
        android:padding="15dp">

        <Button
            android:id="@+id/buttonVrloGanola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_toEndOf="@+id/buttonaMilli"
            android:layout_toRightOf="@+id/buttonaMilli"
            android:background="#2F3A3A"
            android:hapticFeedbackEnabled="false"
            android:shadowColor="#9C27B0"
            android:text="@string/vrloGanola"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#01B14A"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/buttonmajDiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonswolePocketShawty"
            android:layout_marginTop="10dp"
            android:background="#FFAB00"
            android:text="@string/majDiss"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#D50000"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/buttonaMilli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3241CC"
            android:text="@string/aMilli"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFB00"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/buttonswolePocketShawty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttondzonDoe"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="6dp"
            android:text="@string/swolePocketShawty"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#D50000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttondzonDoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonVrloGanola"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:background="#7AC1CC"
            android:text="@string/dzonDoe"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonmadeYouLook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonswolePocketShawty"
            android:layout_marginLeft="159dp"
            android:layout_marginTop="5dp"
            android:background="#D50000"
            android:text="@string/madeYouLook"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonyodaKralj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonmadeYouLook"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="5dp"
            android:background="#D400AA"
            android:text="@string/yodaKralj"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFD600"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonsamoSlobodnoStilujem"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonyodaKralj"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="3dp"
            android:background="#FF6D00"
            android:text="@string/samoSlobodnoStilujem"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button05042015samoSlobodniStil"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonsamoSlobodnoStilujem"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:background="#FFFFFF"
            android:text="@string/samoSlobodniStil"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#6200EA"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttoniznadGrada"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button05042015samoSlobodniStil"
            android:layout_marginTop="9dp"
            android:background="#00C853"
            android:text="@string/iznadGrada"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FBC02D"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonizZNC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttoniznadGrada"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:text="@string/izZNC"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#D50000"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonnestoGanola"
            android:layout_width="146dp"
            android:layout_height="69dp"
            android:layout_below="@id/button05042015samoSlobodniStil"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="10dp"
            android:background="#D50000"
            android:text="@string/nestoGanola"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttontekSamUstao"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonponedjeljak"
            android:layout_marginTop="5dp"
            android:background="#AEEA00"
            android:text="@string/tekSamUstao"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#88003C"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonponedjeljak"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonnestoGanola"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="5dp"
            android:background="#55534D"
            android:text="@string/ponedjeljak"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#00BFA5"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonkrajAprila"
            android:layout_width="176dp"
            android:layout_height="68dp"
            android:layout_below="@id/buttonponedjeljak"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="10dp"
            android:background="#1A237E"
            android:text="@string/krajAprila"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00E676"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>